fix list text align in section 7

--- a/src/App.scss
+++ b/src/App.scss
@@ -692,6 +692,11 @@ footer .lever::after{
     background-color: $unique-blue;
     color: white;
 }
+.pricing-card ul{
+    list-style-type: disc;
+    padding-inline-start: 40px;
+    text-align: left;
+}
 .premium .pricing-description {
     background-color: $unique-darkblue;
     color: white;
